# prayer-studio-fullstack

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/routes/: generate.py  materials.py
backend/app/core/: config.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: llm.py  pipeline.py  prompt_builder.py  rag.py  styles.py
backend/app/utils/: text_extractor.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/materials/: page.tsx
frontend/components/: GenerationForm.tsx  MaterialManager.tsx  OutputPanel.tsx  TagSelector.tsx
frontend/lib/: api.ts
mobile/: .env.example  .gitignore  App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/components/: GenerationForm.tsx  OutputPanel.tsx  StyleSelector.tsx
mobile/lib/: api.ts
