[project]
name = "prayer-studio-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "llama-index>=0.14.1,<0.15",
    "llama-index-embeddings-openai>=0.5.1,<0.6",
    "llama-index-llms-openai>=0.5.4,<0.7",
    "llama-index-vector-stores-postgres>=0.7.3,<0.8",
    "openai==1.107.0",
    "pgvector==0.4.1",
    "psycopg[binary]==3.2.9",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pypdf==5.9.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
]
